Better variable names, added listen variable

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,4 +7,7 @@ shaarli_base: /var/www/shaarli
 shaarli_group: www-data
 shaarli_user: shaarli
 
-shaarli_servername: shaarli.localhost
+shaarli_nginx_listen: 80
+shaarli_nginx_server_name: shaarli.localhost
+shaarli_nginx_filename: shaarli.conf
+
