--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,3 +14,4 @@ shaarli_nginx_filename: shaarli-{{ shaarli_nginx_server_name }}
 letsencrypt_wellknown: /var/www/letsencrypt
 letsencrypt_activate: false
 letsencrypt_https: false
+letsencrypt_domain: "{{ shaarli_nginx_server_name }}"
