Add possibility to deny robots

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,7 @@ shaarli_user: shaarli
 
 shaarli_nginx_server_name: shaarli.localhost
 shaarli_nginx_filename: shaarli-{{ shaarli_nginx_server_name }}
+shaarli_deny_robots: false
 
 letsencrypt_wellknown: /var/www/letsencrypt
 letsencrypt_activate: false
