Added php dependencies

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,18 @@
 ---
 # tasks file for MicroJoe.shaarli
-#
+
+- name: Install php dependencies
+  apt:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - php-cli
+    - php-fpm
+    - php-gd
+    - php-intl
+    - php-xml
+    - php-mbstring
+
 - name: Make sure Shaarli group exists
   group:
     name: "{{ shaarli_group }}"
