--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for MicroJoe.shaarli
-shaarli_version: 0.9.0
+shaarli_version: 0.11.1
 shaarli_source: https://github.com/shaarli/Shaarli/releases/download/v{{ shaarli_version }}/shaarli-v{{ shaarli_version }}-full.tar.gz
 
 shaarli_base: /var/www/shaarli
@@ -10,9 +10,9 @@ shaarli_user: shaarli
 
 shaarli_nginx_server_name: shaarli.localhost
 shaarli_nginx_filename: shaarli-{{ shaarli_nginx_server_name }}
-shaarli_deny_robots: false
+shaarli_deny_robots: true
 
 letsencrypt_wellknown: /var/www/letsencrypt
-letsencrypt_activate: false
-letsencrypt_https: false
+letsencrypt_activate: true
+letsencrypt_https: true
 letsencrypt_domain: "{{ shaarli_nginx_server_name }}"
